case update validation bug fix

--- a/force-app/main/default/classes/ABSLI_CreateCaseValidationsController.cls
+++ b/force-app/main/default/classes/ABSLI_CreateCaseValidationsController.cls
@@ -11,11 +11,7 @@ public without sharing class ABSLI_CreateCaseValidationsController {
     @AuraEnabled
     public static String penalInterestPayoutSaralHealthValidation(String caseRecord){
         try {
-            Map<String, Object> jsonMap = (Map<String, Object>) JSON.deserializeUntyped((caseRecord));
-            Asset policy = [SELECT Id, Name, Plan_Name__c 
-                            FROM Asset 
-                            WHERE Business_Unit__c=:ABSLI_Constants.BUSINESS_UNIT
-                            AND Id=:String.valueOf(jsonMap.get('AssetId'))];
+            Asset policy = ABSLI_CreateCaseValidationsController.getPolicyDetails(caseRecord);
             if(policy!=null){
                 if(policy.Plan_Name__c==ABSLI_Constants.SARAL_HEALTH_PLAN_NAME){
                     return 'Success';
@@ -33,6 +29,103 @@ public without sharing class ABSLI_CreateCaseValidationsController {
             ABCL_Logger.emit();
             throw new AuraHandledException(e.getMessage());
         }
+    }
+
+    @AuraEnabled(cacheable = false)
+    public static List<RedirectToPortalResponse> redirectToCustomerPortalValidation(String caseId){
+        List<RedirectToPortalResponse> returnList = new List<RedirectToPortalResponse>();
+        Case c = [SELECT Id, ABSLI_Case_Detail__c,CCC_External_Id__c FROM Case WHERE Id=:caseId];
+        if(c.ABSLI_Case_Detail__c!=null){
+        	ABSLI_Case_Detail__c caseExt = [SELECT Id, Reinstatement_Amount__c, COI_Covid_Quest__c, Medicals__c, Remarks__c, COI_Signed_Date__c
+                                           FROM ABSLI_Case_Detail__c WHERE Id=:c.ABSLI_Case_Detail__c];
+            Map<String,String> fieldNamesAndTypes = ABSLI_Constants.FIELD_AND_TYPE_FOR_CUSTOMER_PORTAL_REDIRECTION;
+            List<String> blankFields = new List<String>();
+            // VIRENDRA - 22 JUL 2024.
+            String fCode = ABSLI_Constants.CCC_AND_FUNCTION_CODE.containsKey(c.CCC_External_Id__c)
+            	? ABSLI_Constants.CCC_AND_FUNCTION_CODE.get(c.CCC_External_Id__c) : '';
+            
+            for(String field : fieldNamesAndTypes.keySet()){
+              	Object fieldValue = caseExt.get(field);
+            	String fieldType = fieldNamesAndTypes.get(field);
+                if (fieldType == 'String' && String.isBlank((String)fieldValue)) {
+                    blankFields.add(field);
+                } else if (fieldType == 'Decimal' && (fieldValue == null || ((Decimal)fieldValue) == 0)) {
+                    blankFields.add(field);
+                } else if (fieldType == 'Date' && fieldValue == null) {
+                    blankFields.add(field);
+                }
+            }
+            
+            for(ASF_Checklist__c checkList : [SELECT Id, Case__c, Status__c FROM ASF_Checklist__c WHERE Case__c =:caseId AND Mandatory__c=TRUE]){
+                if(!ABSLI_Constants.CHECKLIST_PASS_STATUS.split(',').contains(checkList.Status__c)){
+                    RedirectToPortalResponse responseWrap = new RedirectToPortalResponse('error','Checklist/s are still pending');
+                    returnList.add(responseWrap);
+                    break;
+                }
+            }
+            if (!blankFields.isEmpty()) {
+                RedirectToPortalResponse responseWrap = new RedirectToPortalResponse('error','The following fields are blank: ' + String.join(blankFields, ', '));
+                returnList.add(responseWrap);
+            }
+            // VIRENDRA - 22 JUL 2024.
+            if(caseExt.COI_Covid_Quest__c != null && fCode =='STPRI'){
+                if(caseExt.COI_Covid_Quest__c.countMatches(ABSLI_Constants.RQ_REDIRECT_COVID_QUE) > 1 ){
+                    RedirectToPortalResponse responseWrap = new RedirectToPortalResponse('error','Due to joint life redirect not done and treat as Non STP.');
+                	returnList.add(responseWrap);
+                }
+            }
+            
+            if(returnList.size()<1){
+				RedirectToPortalResponse responseWrap = new RedirectToPortalResponse('success','Redirecting to Customer Portal...');
+                returnList.add(responseWrap);
+            }
+            
+            
+            return returnList;
+        }else{
+            RedirectToPortalResponse responseWrap = new RedirectToPortalResponse('error','Not eligible');
+            returnList.add(responseWrap);
+            return returnList;
+        }
+    }
+    
+    @AuraEnabled(cacheable = true)
+    public static String generateCustomerPortalURL(String caseId){
+        
+        String staticUrl = Label.ABSLI_CustomerPortalUrl;
+        DateTime currentDateTime = DateTime.Now();
+        
+        Case cs = [SELECT Id,CaseNumber,CCC_External_Id__c,AssetId,Asset.Policy_No__c,Client_Code__c,ABSLI_Case_Detail__r.COI_Covid_Quest__c
+                  FROM Case 
+                  WHERE Id=:caseId];
+        
+        String fCode = ABSLI_Constants.CCC_AND_FUNCTION_CODE.containsKey(cs.CCC_External_Id__c)
+            	? ABSLI_Constants.CCC_AND_FUNCTION_CODE.get(cs.CCC_External_Id__c) : '';
+        
+        String coiValue = '';
+        if(!String.isBlank(cs.ABSLI_Case_Detail__r.COI_Covid_Quest__c)){
+        	coiValue = cs.ABSLI_Case_Detail__r.COI_Covid_Quest__c.replace('[', '').replace(']', '').replace('COVID_QUE','').replace('"','').replace(',','');    
+        }
+        
+        String urlParameters = '{functionCode='+fCode+'&';
+       	urlParameters += 'clientId='+cs.Client_Code__c+'&';
+        urlParameters += 'policyNumber='+cs.AssetId!=null?cs.Asset.Policy_No__c:''+'&';
+        urlParameters += 'timestamp='+currentDateTime.Day()+currentDateTime.Month()+currentDateTime.Year()+currentDateTime.Hour()+currentDateTime.Minute()+currentDateTime.Second()+'000'+'&';
+        urlParameters += 'caseId='+cs.CaseNumber+'&';
+        urlParameters += 'source='+ABSLI_Constants.ESB_SOURCE_ID+'&';
+        urlParameters += 'COI='+coiValue+'}';
+        
+        System.debug('urlParameters--> '+urlParameters);
+        
+        Blob IvValue = Blob.valueOf(Label.ABSLI_Ivkey);
+        Blob keyValue = Blob.ValueOf(Label.ABSLI_key);
+        Blob urlParamValue = Blob.valueOf(urlParameters);
+        Blob urlParamEncrypted = Crypto.encrypt('AES256', keyValue, IvValue, urlParamValue);
+        String urlParamEncryptedString = EncodingUtil.base64Encode (urlParamEncrypted);
+
+        String customerPortalUrl = staticUrl + urlParamEncryptedString;
+        
+        return customerPortalUrl;
     }
     
     //AM-PR970457-2001 - Loan payout validation before case creation. Call Gen Fund API to check loan eligibility.
@@ -90,12 +183,7 @@ public without sharing class ABSLI_CreateCaseValidationsController {
     @AuraEnabled
     public static String nomineeChangeCaseCreationValidation(String caseRecord){
         try {
-
-            Map<String, Object> jsonMap = (Map<String, Object>) JSON.deserializeUntyped((caseRecord));
-            Asset policy = [SELECT Id, Name, Policy_Identification__c 
-                            FROM Asset 
-                            WHERE Business_Unit__c=:ABSLI_Constants.BUSINESS_UNIT
-                            AND Id=:String.valueOf(jsonMap.get('AssetId'))];
+			Asset policy = ABSLI_CreateCaseValidationsController.getPolicyDetails(caseRecord);
             if(policy!=null){
                 if((!ABSLI_Constants.NOMINEE_UPDATE_POLICY_IDENTIFICATION_VALIDATION.contains(policy.Policy_Identification__c))){
                     return 'Success';
@@ -119,14 +207,10 @@ public without sharing class ABSLI_CreateCaseValidationsController {
     @AuraEnabled
     public static String duplicatePolicyPrintingValidation(String caseRecord){
         try {
-            Map<String, Object> jsonMap = (Map<String, Object>) JSON.deserializeUntyped((caseRecord));
-            Asset policy = [SELECT Id, Name, Issue_Date__c
-                            FROM Asset 
-                            WHERE Business_Unit__c=:ABSLI_Constants.BUSINESS_UNIT
-                            AND Id=:String.valueOf(jsonMap.get('AssetId'))];
+            Asset policy = ABSLI_CreateCaseValidationsController.getPolicyDetails(caseRecord);
             if(policy!=null && policy.Issue_Date__c!=null){
                 Date issueDate = Date.newInstance(policy.Issue_Date__c.year(), policy.Issue_Date__c.month(), policy.Issue_Date__c.day());
-                Date oneYearAgo = issueDate.addYears(-1);
+                Date oneYearAgo = Date.today().addYears(-1);
                 if(issueDate >= oneYearAgo){
                     return 'Success';
                 }else{
@@ -148,11 +232,7 @@ public without sharing class ABSLI_CreateCaseValidationsController {
     @AuraEnabled
     public static String performUINapiCallout(String caseRecord){
         try{
-            Map<String, Object> jsonMap = (Map<String, Object>) JSON.deserializeUntyped((caseRecord));
-            Asset policy = [SELECT Id, Name, Policy_No__c, Effective_Date__c
-                            FROM Asset 
-                            WHERE Business_Unit__c=:ABSLI_Constants.BUSINESS_UNIT
-                            AND Id=:String.valueOf(jsonMap.get('AssetId'))];
+            Asset policy = ABSLI_CreateCaseValidationsController.getPolicyDetails(caseRecord);
             if(policy!=null){
                 UINapiRequestWrapper request = new UINapiRequestWrapper();
                 request.POLICY_ID = policy.Policy_No__c;
@@ -185,6 +265,128 @@ public without sharing class ABSLI_CreateCaseValidationsController {
             ABCL_Logger.message(e.getMessage());
             ABCL_Logger.emit();
             throw new AuraHandledException(e.getMessage());
+        }
+    }
+    
+    @AuraEnabled
+    public static String assignmentIssueTypeValidation(String caseRecord){
+        try {
+            Asset policy = ABSLI_CreateCaseValidationsController.getPolicyDetails(caseRecord);
+            if(policy!=null){
+                if(policy.Policy_Identification__c!=ABSLI_Constants.ASSIGNMENT_ISSUE_TYPE_VALIDATION){
+                    return 'Success';
+                }else{
+                    return 'Policy is not eligible';
+                }
+            }
+            return 'User is not eligible';
+            
+        } catch (Exception e) {
+            System.debug('@@@mess' + e.getMessage() + ' ' + e.getLineNumber());
+            ABCL_Logger.enableExceptionLogging();
+            ABCL_Logger.push('ABSLI_Assignment/Assignment Employer Employee Case creation validation');
+            ABCL_Logger.message(e.getMessage());
+            ABCL_Logger.emit();
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+    
+    @AuraEnabled
+    public static String changeInInvestorProfileValidation(String caseRecord){
+        try {
+            Asset policy = ABSLI_CreateCaseValidationsController.getPolicyDetails(caseRecord);
+            if(policy!=null){
+                if(policy.Type__c=='ULIP'){
+                    return 'Success';
+                }else{
+                    return 'Policy is not eligible for Change In Investor Profile';
+                }
+            }
+            return 'User is not eligible';
+            
+        } catch (Exception e) {
+            System.debug('@@@mess' + e.getMessage() + ' ' + e.getLineNumber());
+            ABCL_Logger.enableExceptionLogging();
+            ABCL_Logger.push('ABSLI_Change_In_Investor_Profile Case creation validation');
+            ABCL_Logger.message(e.getMessage());
+            ABCL_Logger.emit();
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+    
+    @AuraEnabled
+    public static String interestWaiverForHOValidation(String caseRecord){
+        try {
+            Asset policy = ABSLI_CreateCaseValidationsController.getPolicyDetails(caseRecord);
+            if(policy!=null){
+                if(policy.Type__c!='ULIP'){
+                    return 'Success';
+                }else{
+                    return 'Policy is not eligible for Interest Waiver for HO Users';
+                }
+            }
+            return 'User is not eligible';
+            
+        } catch (Exception e) {
+            System.debug('@@@mess' + e.getMessage() + ' ' + e.getLineNumber());
+            ABCL_Logger.enableExceptionLogging();
+            ABCL_Logger.push('ABSLI_Interest_Waiver_for_HO_Users Case creation validation');
+            ABCL_Logger.message(e.getMessage());
+            ABCL_Logger.emit();
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+    
+    @AuraEnabled
+    public static String reinstatementValidation(String caseRecord){
+        try {
+            Asset policy = ABSLI_CreateCaseValidationsController.getPolicyDetails(caseRecord);
+            if(policy!=null){
+                if(policy.Type__c=='ULIP' && Decimal.valueOf(policy.Payment_Term__c)>5){
+                    return 'Success';
+                }else{
+                    return 'Policy is not eligible for Reinstatement';
+                }
+            }
+            return 'User is not eligible';
+            
+        } catch (Exception e) {
+            System.debug('@@@mess' + e.getMessage() + ' ' + e.getLineNumber());
+            ABCL_Logger.enableExceptionLogging();
+            ABCL_Logger.push('ABSLI_Reinstatement Case creation validation');
+            ABCL_Logger.message(e.getMessage());
+            ABCL_Logger.emit();
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+    
+    public static Asset getPolicyDetails(String caseRecord){
+        Map<String, Object> jsonMap = (Map<String, Object>) JSON.deserializeUntyped((caseRecord));
+        String assetId = '';
+        if(jsonMap.get('AssetId')==null){
+            Case cs = [SELECT Id, AssetId FROM Case WHERE Id=:String.valueOf(jsonMap.get('Id'))];
+            assetId = cs.AssetId;
+        }else{
+            assetId = String.valueOf(jsonMap.get('AssetId'));
+        }
+        Asset policy = [SELECT Id, Name, Policy_No__c, Effective_Date__c, Issue_Date__c, Type__c, Payment_Term__c, 
+                            Policy_Identification__c, Plan_Name__c
+                        FROM Asset 
+                        WHERE Business_Unit__c=:ABSLI_Constants.BUSINESS_UNIT
+                        AND Id=:assetId];
+
+        return policy;
+    }
+
+    public class RedirectToPortalResponse{
+        @AuraEnabled
+        public String status{get;set;}
+        @AuraEnabled
+        public String message{get;set;}
+        
+        public RedirectToPortalResponse(String st, String ms){
+            this.status = st;
+            this.message = ms;
         }
     }
 
