--- a/force-app/main/default/classes/ASF_Constants.cls
+++ b/force-app/main/default/classes/ASF_Constants.cls
@@ -141,4 +141,5 @@ public with sharing class ASF_Constants {
     public static final List<String> BUSpecificLANKey = new List<String>{'ABSLI','ABSLIG'};
     public static final List<String> completeChecklistStatus = new List<String>{'Completed','Rejected','Yes','Signature Matched','No','Cancelled','Signature Mismatched','Signature Not Cropped'};
 
+    public static final string CASE_ORIGIN = 'ABSLIG Email';
 }
