--- a/force-app/main/default/classes/ASF_CaseFrameworkHelper.cls
+++ b/force-app/main/default/classes/ASF_CaseFrameworkHelper.cls
@@ -1,3 +1,10 @@
+/**
+ * @description       : 
+ * @author            : ChangeMeIn@UserSettingsUnder.SFDoc
+ * @group             : 
+ * @last modified on  : 07-17-2024
+ * @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
+**/
 public without sharing class ASF_CaseFrameworkHelper {
     
     /**
@@ -73,7 +80,7 @@ public without sharing class ASF_CaseFrameworkHelper {
                                 checklistRecord.Stage_Name__c = caseRec.Stage__c;
                                 checklistRecord.Business_Unit__c = caseRec.Business_Unit__c;
                                 checklistRecord.Checklist_External_Id__c = chklistMaster.Checklist_External_Id__c;
-                                checklistList.add(checklistRecord);
+                                                                checklistList.add(checklistRecord);
                             }
                             break;
                         }
@@ -106,10 +113,10 @@ public without sharing class ASF_CaseFrameworkHelper {
                         caseRule.Case_Rule_Entries__r,
                         caseRec);
                         if (result == true){
-                            slaMap.put('caseOverride',caseRule.Overall_SLA_Closure__c.longValue());
-                            slaMap.put('stageSLA1Override',caseRule.Stage_SLA_Override_1__c.longValue());
-                            slaMap.put('stageSLA2Override',caseRule.Stage_SLA_Override_2__c.longValue());
-                            slaMap.put('stageSLA3Override',caseRule.Stage_SLA_Override_3__c.longValue());    
+                            slaMap.put('caseOverride',caseRule.Overall_SLA_Closure__c?.longValue() ?? null);
+                            slaMap.put('stageSLA1Override',caseRule.Stage_SLA_Override_1__c?.longValue() ?? null);
+                            slaMap.put('stageSLA2Override',caseRule.Stage_SLA_Override_2__c?.longValue() ?? null);
+                            slaMap.put('stageSLA3Override',caseRule.Stage_SLA_Override_3__c?.longValue() ?? null);    
                             break;
                         }
                     }
@@ -241,7 +248,7 @@ public without sharing class ASF_CaseFrameworkHelper {
             for(ASF_Case_SLA_History__c history : caseSlaHistoryMap.get(caseId)){
                 if(history.Stage__c == caseStageMap.get(caseId)){
                     lastActionedUserIdMap.put(caseId, history.Current_Owner_Id__c);
-                    break;
+                    	break;
                 }
         	}
         }
