--- a/force-app/main/default/classes/LeadTriggerHelper.cls
+++ b/force-app/main/default/classes/LeadTriggerHelper.cls
@@ -13,5 +13,17 @@ public class LeadTriggerHelper {
 *****************************************************************************************************************/
   public static void sendLeadToCRM(Map<Id,Lead> newLeadMap){ 
     ABHFL_LeadCreationAPI.executeSendLeadToCRM(newLeadMap.keySet());  
+      }
+
+  /****************************************************************************************************************
+  * @Function - populateLeadFields
+  * @param - newLeadList
+  * @return - void.
+  * @Description - Sending Lead to ABSLIG_BusinessLogic_HelperClass
+  ***********************************************************/
+  public void populateLeadFields(List<Lead> newLeadList){
+
+    ABSLIG_BusinessLogic_HelperClass absligBusinessLogicHelperClassObj = new ABSLIG_BusinessLogic_HelperClass();
+    absligBusinessLogicHelperClassObj.prePopulateFields(newLeadList);
   }
 }
