--- a/force-app/main/default/classes/ABSLI_PendingIGMSComplaintIntegration.cls
+++ b/force-app/main/default/classes/ABSLI_PendingIGMSComplaintIntegration.cls
@@ -187,7 +187,7 @@ public with sharing class ABSLI_PendingIGMSComplaintIntegration implements ASF_I
             this.Complaint_Status_Id = '3';
             this.Status_Change_Date = ABCL_IntegrationCommonUtility.dateFormat(System.today(), 'dd-MM-YYYY');
             this.Option = ABSLI_Constants.ABSLI_IGMS_OPTION;
-            this.Mode = ABSLI_Constants.ABSLI_IGMS_OPTION;
+            this.Mode = ABSLI_Constants.ABSLI_IGMS_MODE_UPDATE;
             this.Addressed_To_Insurer = ABSLI_Constants.ABSLI_IGMS_ADDRESS_TO_INSURER_Y;
             this.Trans_Login_Id = ABSLI_Constants.ABSLI_IGMS_TRANS_LOGIN_ID;
         }
