--- a/force-app/main/default/classes/ABSLI_RegisterIGMSComplaintIntegration.cls
+++ b/force-app/main/default/classes/ABSLI_RegisterIGMSComplaintIntegration.cls
@@ -298,7 +298,7 @@ public with sharing class ABSLI_RegisterIGMSComplaintIntegration implements ASF_
             this.District_Id = '1';
             this.Identifier_Type = '1';
             this.Option = ABSLI_Constants.ABSLI_IGMS_OPTION;
-            this.Mode = ABSLI_Constants.ABSLI_IGMS_OPTION;
+            this.Mode = ABSLI_Constants.ABSLI_IGMS_MODE_REGISTER;
             this.Addressed_To_Insurer = ABSLI_Constants.ABSLI_IGMS_ADDRESS_TO_INSURER_Y;
             this.Trans_Login_Id = ABSLI_Constants.ABSLI_IGMS_TRANS_LOGIN_ID;
         }
