--- a/force-app/main/default/classes/ABSLI_ClosedIGMSComplaintIntegration.cls
+++ b/force-app/main/default/classes/ABSLI_ClosedIGMSComplaintIntegration.cls
@@ -255,7 +255,7 @@ public with sharing class ABSLI_ClosedIGMSComplaintIntegration implements ASF_In
             this.Addressed_To_Insurer = ABSLI_Constants.ABSLI_IGMS_ADDRESS_TO_INSURER_Y;
             this.Trans_Login_Id = ABSLI_Constants.ABSLI_IGMS_TRANS_LOGIN_ID;
             this.Option = ABSLI_Constants.ABSLI_IGMS_OPTION;
-            this.Mode = ABSLI_Constants.ABSLI_IGMS_OPTION;
+            this.Mode = ABSLI_Constants.ABSLI_IGMS_MODE_UPDATE;
         }
     }
     /**
