--- a/force-app/main/default/classes/ABSLI_ReopenedIGMSComplaintIntegration.cls
+++ b/force-app/main/default/classes/ABSLI_ReopenedIGMSComplaintIntegration.cls
@@ -259,7 +259,7 @@ public with sharing class ABSLI_ReopenedIGMSComplaintIntegration  implements ASF
             this.Addressed_To_Insurer = ABSLI_Constants.ABSLI_IGMS_ADDRESS_TO_INSURER_Y;
             this.Trans_Login_Id = ABSLI_Constants.ABSLI_IGMS_TRANS_LOGIN_ID;
             this.Option = ABSLI_Constants.ABSLI_IGMS_OPTION;
-            this.Mode = ABSLI_Constants.ABSLI_IGMS_OPTION;
+            this.Mode = ABSLI_Constants.ABSLI_IGMS_MODE_UPDATE;
         }
     }
     /**
