--- a/force-app/main/default/classes/ABSLI_AttendedToValidationHandler.cls
+++ b/force-app/main/default/classes/ABSLI_AttendedToValidationHandler.cls
@@ -46,9 +46,18 @@ public with sharing class ABSLI_AttendedToValidationHandler {
 
             if(String.isNotBlank(errorText)){
                 errorText = errorText.removeEnd(', ');
-                //errorText += ' fields are mandatory in the Attended to section.';
+                errorText += ' fields are mandatory in the Attended to section.';
             }
             fieldSpecificValidation(caseRecord);
+
+            Map<Id, ABSLI_CTSTHelper.FieldValidationResult> wrapperResultMap = ABSLI_CTSTHelper.validateResolutionfieldComplaints(new List<Case>{caseRecord});
+            if(wrapperResultMap.containsKey(caseRecord.Id)){
+                ABSLI_CTSTHelper.FieldValidationResult wrapperResult = wrapperResultMap.get(caseRecord.Id);
+                if(wrapperResult.result){
+                    result.status = ABSLI_Constants.ERROR;
+                    result.response = wrapperResult.message; 
+                }
+            }
 
 
             if(caseRecord.ABSLI_Case_Detail__r.IGMS_Complaint_Status__c != '3'){
@@ -109,6 +118,15 @@ public with sharing class ABSLI_AttendedToValidationHandler {
             errorText += ' fields are mandatory in the Attended to Escalated section.';
         }
         fieldSpecificValidation(caseRecord);
+
+        /*Map<Id, ABSLI_CTSTHelper.FieldValidationResult> wrapperResultMap = ABSLI_CTSTHelper.validateResolutionfieldComplaints(new List<Case>{caseRecord});
+        if(wrapperResultMap.containsKey(caseRecord.Id)){
+            ABSLI_CTSTHelper.FieldValidationResult wrapperResult = wrapperResultMap.get(caseRecord.Id);
+            if(wrapperResult.result){
+                result.status = ABSLI_Constants.ERROR;
+                result.response = wrapperResult.message; 
+            }
+        }*/
 
         if(bErrored){
             result.status = ABSLI_Constants.ERROR;
