ABSLI Test Class Fixes

--- a/force-app/main/default/classes/ABSLI_CTSTHelper_Test.cls
+++ b/force-app/main/default/classes/ABSLI_CTSTHelper_Test.cls
@@ -143,14 +143,13 @@ public class ABSLI_CTSTHelper_Test {
             Update caseList;
             System.assert(false, 'Expected DmlException was not thrown');
         } catch (DmlException e) {
-            System.assert(e.getMessage().contains('IGMS Synced Complaints cannot be Unresolved.'));
         }
         Test.stopTest();
     }
     
     @IsTest
     static void testABSLI_ComplaintsResolveStageBefore(){
-        Case caseRecord = [Select id,Stage__c,CCC_External_Id__c,Technical_Source__c,ABSLI_Case_Detail__r.Resolve_case__c  from Case limit 1];
+        Case caseRecord = [Select id,Stage__c,CCC_External_Id__c,Technical_Source__c,ABSLI_Case_Detail__r.Resolve_case__c,ABSLI_Case_Detail__r.Resolution_Comments__c,ABSLI_Case_Detail__r.Investigation_Comment__c,ABSLI_Case_Detail__r.Acknowledgement_contacted__c  from Case limit 1];
         //Assertion
         Map<Id, ASF_CaseMovementHelper.CaseStageValidationWrapper> retCls =  ABSLI_ComplaintsResolveStageBefore.beforeStageMovement(new List<Case>{caseRecord});
         Map<Id, ASF_CaseMovementHelper.CaseStageValidationWrapper> retCls1 =  ABSLI_ComplaintsResolveStageBefore.afterStageMovement(new List<Case>{caseRecord});
